*******************************************************************************
4.5b8
*******************************************************************************
2007-01-23    <dancy@CANDY2K>

	* locking.cl: New file (used by nlm.cl)

	* nlm.cl: Use new functions from locking.cl to use direct Win32
	LockFile and Unlockfile APIs.  This was an attempt to fix issues with spr32573.  It didn't help, but I'll leave the changes in anyway.

	* nlm.cl: Added error handlers around my-lock-file and
	my-unlock-file calls to deal with spr32573 strangeness.  I don't
	understand why UnlockFile is failing sometimes.  The customer
	cannot reproduce w/ a small test case.  Anyway, these changes
	should keep things moving along even when UnlockFile fails (we
	simply log and ignore it).
	
*******************************************************************************
4.5b6
*******************************************************************************
2007-01-17    <dancy@CANDY2K>

	* interval.cl: New file (used by nlm.cl)

	* BUGFIX: nlm.cl: Reimplemented large chunks of the locking
	process to allow for proper compatibility between unix-style and
	windows-style locking.  Hopefully this will address spr32573 and
	spr32512.

*******************************************************************************
4.5b5
*******************************************************************************
2006-12-20    <dancy@CANDY2K>

	* BUGFIX: nfs.cl: Fixed many with-xxx macros so that they return
	properly formatted results for the 'link' operation (which has
	different on-fail return info than other procedures).
	
*******************************************************************************
4.5b4
*******************************************************************************
2006-12-19    <dancy@CANDY2K>

	* BUGFIX: spr32469: Attempt to improve hard link support.  Added
	(really, just added enforcement of) limitation that hard links can
	only be made within the same parent directory.  
