@@ -1,9 +1,13 @@
-# $Id: Makefile,v 1.13 2006/01/30 18:49:11 layer Exp $
+# $Id: Makefile,v 1.14 2007/01/25 22:22:06 layer Exp $
 
-### IMPORTANT: the nightly builds the product need to use a local copy and
-###	       and not one in /c/Program Files/...  only change the ../aclxxx
-###	       when the build machine's copy is updated.
+## The `stable' directory is one that is only updated after rigorous
+## testing, to make sure the base is as stable as possible.
+STABLE := $(shell if test -d "/c/Program Files/acl80-stable"; then echo yes; else echo no; fi)
+ifeq ($(STABLE),yes)
+LISPDIR = "/c/Program Files/acl80-stable"
+else
 LISPDIR = "/c/Program Files/acl80"
+endif
 ALLEGRO=$(LISPDIR)/allegro
 
 build: configure/configure.exe
